name app and add favicon

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,9 @@
+{% load static %}
 <nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item is-size-4" href="/">
-      Todo App
+      <image src="{% static 'images/task100.png' %}"/>
+      Reflect
     </a>
 
     <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="mainnav">
