--- a/templates/base.html
+++ b/templates/base.html
@@ -4,8 +4,11 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Todo App</title>
-        <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.ico' %}"/>
+        <title>Reflect</title>
+        <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon/favicon.ico' %}"/>
+        <link rel="icon" type="image/png" sizes="16x16" rel="noopener" target="_blank" href="{% static 'images/favicon/favicon-16.png' %}">
+        <link rel="icon" type="image/png" sizes="32x32" rel="noopener" target="_blank" href="{% static 'images/favicon/favicon-32.png' %}">
+        <link rel="icon" type="image/png" sizes="96x96" rel="noopener" target="_blank" href="{% static 'images/favicon/favicon-96.png' %}">
         <link rel="stylesheet" href="https://unpkg.com/bulmaswatch/simplex/bulmaswatch.min.css">
         <link rel="stylesheet" href="{% static 'css/style.css' %}" />
         <script src="{% static 'js/app.js' %}" defer></script>
