add creation of task per horizon

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -19,6 +19,10 @@
         Home
       </a>
 
+      <a class="navbar-item" href="{% url 'todos:horizon-view-list' %}">
+        Horizons
+      </a>
+
       <a class="navbar-item" href="{% url 'todos:todo-view-list' %}">
         Todos
       </a>
