remove todos index and update children label

--- a/todos/templates/todos/todo_form.html
+++ b/todos/templates/todos/todo_form.html
@@ -3,11 +3,10 @@
 
 <h1 class="title">
   {% if form.instance.id %}
-  Update
+  Update &quot;{{ form.instance.name }}&quot;
   {% else %}
-  New
+  New Entry
   {% endif %}
-  Entry
 </h1>
 
 <form method="post">
