add checkbox styling

--- a/todos/templates/todos/todo_form.html
+++ b/todos/templates/todos/todo_form.html
@@ -19,6 +19,10 @@
         <div class="select">
           {{ field }}
         </div>
+        {% elif field.name == 'children' %}
+        <div class="checkbox">
+          {{ field }}
+        </div>
         {% else %}
           {{ field }}
         {% endif %}
