--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -63,7 +63,7 @@
       <div class="navbar-item">
         <div class="buttons">
           <a class="button is-primary" href="{% url 'todos:profile-detail' %}">
-            Profile
+            {{ user.get_username }}
           </a>
         </div>
       </div>
