--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -62,9 +62,16 @@
     <div class="navbar-end">
       <div class="navbar-item">
         <div class="buttons">
-          <a class="button is-primary" href="{% url 'todos:profile-detail' %}">
-            {{ user.get_username }}
-          </a>
+          {% if user.is_authenticated %}
+            <a class="button is-primary" href="{% url 'todos:profile-detail' %}">
+              {{ user.get_username }}
+            </a>
+          {% else %}
+            <a class="button is-primary" href="{% url 'login' %}">
+              Login
+            </a>
+          {% endif %}
+
         </div>
       </div>
     </div>
