--- a/todos/templates/todos/todo_card.html
+++ b/todos/templates/todos/todo_card.html
@@ -1,5 +1,6 @@
 <div class="box">
   <div class="card">
+    <!--
     <div class="card-image">
       <figure class="image is-4by3">
         <img
@@ -8,8 +9,10 @@
         />
       </figure>
     </div>
+    -->
     <div class="card-content">
       <div class="media">
+        <!--
         <div class="media-left">
           <figure class="image is-48x48">
             <img
@@ -18,6 +21,7 @@
             />
           </figure>
         </div>
+        -->
         <div class="media-content">
           <p class="title is-4">John Smith</p>
           <p class="subtitle is-6">@johnsmith</p>
@@ -25,11 +29,11 @@
       </div>
 
       <div class="content">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec
-        iaculis mauris. <a>@bulmaio</a>. <a href="#">#css</a>
-        <a href="#">#responsive</a>
+        {{ todo.description }}
         <br />
-        <time datetime="2016-1-1">11:09 PM - 1 Jan 2016</time>
+        {% if todo.due_date %}
+          <time datetime="">{{ todo.due_date }}</time>
+        {% endif %}
       </div>
     </div>
   </div>
