added box for detail

--- a/todos/templates/todos/todo_detail.html
+++ b/todos/templates/todos/todo_detail.html
@@ -9,45 +9,47 @@
   Horizon: {{ object.horizon_name }}
 </h2>
 
-<div class="block">
-  <strong>Description:</strong>
-  {{ object.description }}
-</div>
+<div class="box">
+  <div class="block">
+    <strong>Description:</strong>
+    {{ object.description }}
+  </div>
 
-<div class="block">
-  <strong>Completed:</strong>
-  {{ object.completed }}
-</div>
+  <div class="block">
+    <strong>Completed:</strong>
+    {{ object.completed }}
+  </div>
 
-<div class="block">
-  <strong>Due Date:</strong>
-  {{ object.due_date }}
-</div>
+  <div class="block">
+    <strong>Due Date:</strong>
+    {{ object.due_date }}
+  </div>
 
-<div class="block">
-  <strong>Created At:</strong>
-  {{ object.created_at }}
-</div>
+  <div class="block">
+    <strong>Created At:</strong>
+    {{ object.created_at }}
+  </div>
 
-<div class="block">
-  <strong>Updated At:</strong>
-  {{ object.updated_at }}
-</div>
+  <div class="block">
+    <strong>Updated At:</strong>
+    {{ object.updated_at }}
+  </div>
 
-{% if not object.horizon == 'AC' %}
-<div class="block">
-  <strong>Children:</strong>
-  <ul>
-  {% for child in object.children.all %}
-    <li>
-      {{ child.name }} - {{ child.description }}
-    </li>
-    {% empty %}
-    <strong>None</strong>
-  {% endfor %}
-  </ul>
+  {% if not object.horizon == 'AC' %}
+  <div class="block">
+    <strong>Children:</strong>
+    <ul>
+    {% for child in object.children.all %}
+      <li>
+        {{ child.name }} - {{ child.description }}
+      </li>
+      {% empty %}
+      <strong>None</strong>
+    {% endfor %}
+    </ul>
+  </div>
+  {% endif %}
 </div>
-{% endif %}
 
 <br />
 
