--- a/todos/templates/todos/todo_detail.html
+++ b/todos/templates/todos/todo_detail.html
@@ -60,9 +60,17 @@
     </a>
   </p>
 
+  {% if not object.horizon == 'AC' %}
   <p class="control">
     <a href="{% url 'todos:todo-children' object.id %}" class="button is-text">
       Children
+    </a>
+  </p>
+  {% endif %}
+
+  <p class="control">
+    <a href="{% url 'todos:todo-comments' todo.id %}" class="button is-text">
+     Comments
     </a>
   </p>
 
