--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
         <link rel="icon" type="image/png" sizes="96x96" rel="noopener" target="_blank" href="{% static 'images/favicon/favicon-96.png' %}">
         <link rel="stylesheet" href="https://unpkg.com/bulmaswatch/simplex/bulmaswatch.min.css">
         <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+        <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.14.0/dist/cdn.min.js"></script>
         <script src="{% static 'js/app.js' %}" defer></script>
     </head>
     <body>
