fixed bug in purpose subitem creation. fixed bug in comments viewing, fixed bug in symmetrical owning, fixed redirection after save, fixed up link to children view

--- a/todos/templates/todos/todo_detail.html
+++ b/todos/templates/todos/todo_detail.html
@@ -41,7 +41,9 @@
     <ul>
     {% for child in object.children.all %}
       <li>
-        {{ child.name }} - {{ child.description }}
+        <a href="{% url 'todos:todo-view' child.pk %}" class="">
+          {{ child.name }} &ndash; {{ child.description }}
+        </a>
       </li>
       {% empty %}
       None
