update headers and add js htmx lib

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -15,47 +15,44 @@
 
   <div id="mainnav" class="navbar-menu">
     <div class="navbar-start">
-      <a class="navbar-item" href="/">
-        Home
-      </a>
 
       <div class="navbar-item has-dropdown is-hoverable">
-        <a class="navbar-link" href="{% url 'todos:horizon-view-list' %}">
-          Horizons
+        <a class="navbar-link" href="/">
+          Home
         </a>
 
         <div class="navbar-dropdown">
-          <a class="navbar-item" href="{% url 'todos:horizon-detail-list' 'AC' %}">
-            Actions
+          <a class="navbar-item" href="{% url 'todos:horizon-view-list' %}">
+            Horizons
           </a>
-          <a class="navbar-item" href="{% url 'todos:horizon-detail-list' 'PR' %}">
-            Projects
-          </a>
-          <a class="navbar-item" href="{% url 'todos:horizon-detail-list' 'FO' %}">
-            Focus
-          </a>
-          <a class="navbar-item" href="{% url 'todos:horizon-detail-list' 'GO' %}">
-            Goals
-          </a>
-          <a class="navbar-item" href="{% url 'todos:horizon-detail-list' 'VI' %}">
-            Visions
-          </a>
-          <a class="navbar-item" href="{% url 'todos:horizon-detail-list' 'PU' %}">
-            Purpose
+          <a class="navbar-item" href="{% url 'todos:todo-tree' %}">
+            Tree View
           </a>
         </div>
       </div>
 
-      <a class="navbar-item" href="{% url 'todos:horizon-detail-list' 'AC' %}">
-        Actions
+      <a class="navbar-item" href="{% url 'todos:horizon-detail-list' 'PU' %}">
+        Purpose
+      </a>
+
+      <a class="navbar-item" href="{% url 'todos:horizon-detail-list' 'VI' %}">
+        Vision
+      </a>
+
+      <a class="navbar-item" href="{% url 'todos:horizon-detail-list' 'GO' %}">
+        Goals
+      </a>
+
+      <a class="navbar-item" href="{% url 'todos:horizon-detail-list' 'FO' %}">
+        Focus
       </a>
 
       <a class="navbar-item" href="{% url 'todos:horizon-detail-list' 'PR' %}">
         Projects
       </a>
 
-      <a class="navbar-item" href="{% url 'todos:horizon-detail-list' 'FO' %}">
-        Focus
+      <a class="navbar-item" href="{% url 'todos:horizon-detail-list' 'AC' %}">
+        Actions
       </a>
     </div>
 
