--- a/templates/base.html
+++ b/templates/base.html
@@ -11,8 +11,6 @@
         <link rel="icon" type="image/png" sizes="96x96" rel="noopener" target="_blank" href="{% static 'images/favicon/favicon-96.png' %}">
         <link rel="stylesheet" href="https://unpkg.com/bulmaswatch/simplex/bulmaswatch.min.css">
         <link rel="stylesheet" href="{% static 'css/style.css' %}" />
-        <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.14.0/dist/cdn.min.js"></script>
-        <script src="{% static 'js/app.js' %}" defer></script>
     </head>
     <body>
         {% if user.is_authenticated %}
@@ -24,5 +22,8 @@
             {% endblock %}
           </div>
         </div>
+        <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.14.0/dist/cdn.min.js"></script>
+        <script defer src="https://unpkg.com/htmx.org@1.9.12"></script>
+        <script defer src="{% static 'js/app.js' %}"></script>
     </body>
 </html>
