update logo and favicon

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,7 +2,7 @@
 <nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item is-size-4" href="/">
-      <image src="{% static 'images/task100.png' %}"/>
+      <image src="{% static 'images/bear.png' %}" style="max-height: 3rem;"/>
       Reflect
     </a>
 
