--- a/templates/base.html
+++ b/templates/base.html
@@ -5,10 +5,13 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Reflect</title>
+
         <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon/favicon.ico' %}"/>
-        <link rel="icon" type="image/png" sizes="16x16" rel="noopener" target="_blank" href="{% static 'images/favicon/favicon-16.png' %}">
-        <link rel="icon" type="image/png" sizes="32x32" rel="noopener" target="_blank" href="{% static 'images/favicon/favicon-32.png' %}">
-        <link rel="icon" type="image/png" sizes="96x96" rel="noopener" target="_blank" href="{% static 'images/favicon/favicon-96.png' %}">
+        <link rel="icon" type="image/png" sizes="16x16" rel="noopener" target="_blank" href="{% static 'images/favicon/favicon-16x16.png' %}">
+        <link rel="icon" type="image/png" sizes="32x32" rel="noopener" target="_blank" href="{% static 'images/favicon/favicon-32x32.png' %}">
+        <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/favicon/apple-touch-icon.png' %}">
+        <link rel="manifest" href="{% static 'images/favicon/site.webmanifest' %}">
+
         <link rel="stylesheet" href="https://unpkg.com/bulmaswatch/simplex/bulmaswatch.min.css">
         <link rel="stylesheet" href="{% static 'css/style.css' %}" />
     </head>
