--- a/todos/templates/todos/todo_horizon_detail.html
+++ b/todos/templates/todos/todo_horizon_detail.html
@@ -35,88 +35,7 @@
 </a>
 
 <div id="todos">
-  <table class="table is-fullwidth is-hoverable is-striped">
-    <thead>
-      <tr>
-        <th>
-            Name
-        </th>
-        <th>
-            Description
-        </th>
-        <th>
-            Due Date
-        </th>
-        <th>
-            Created At
-        </th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for todo in page_obj %}
-        <tr>
-          <td class="{% if todo.blocked %} has-text-grey-light {% endif %}{% if todo.completed %} strikethrough {% endif %}">
-             <a href="{% url 'todos:todo-view' todo.id %}" class="">
-              {{ todo.name }}
-            </a>
-          </td>
-          <td class="{% if todo.blocked %} has-text-grey-light {% endif %}{% if todo.completed %} strikethrough {% endif %}">
-            {{ todo.description }}
-          </td>
-          <td class="{% if todo.blocked %} has-text-grey-light {% endif %}{% if todo.completed %} strikethrough {% endif %}">
-            {{ todo.due_date }}
-          </td>
-          <td class="{% if todo.blocked %} has-text-grey-light {% endif %}{% if todo.completed %} strikethrough {% endif %}">
-            {{ todo.created_at }}
-          </td>
-          <td>
-            <form method="post" action="{% url 'todos:todo-toggle' todo.id %}" style="display: inline">
-              {% csrf_token %}
-              <button type="submit" class="button is-text">Toggle</button>
-            </form>
-            |
-            <form method="post" action="{% url 'todos:todo-blocked' todo.id %}" style="display: inline">
-              {% csrf_token %}
-              <button type="submit" class="button is-text">
-                {% if todo.blocked %}
-                  Unblock
-                {% else %}
-                  Block
-                {% endif %}
-              </button>
-            </form>
-            |
-            <a href="{% url 'todos:todo-update' todo.id %}" class="button is-text">
-             Update
-            </a>
-            |
-            <a href="{% url 'todos:todo-delete' todo.id %}" class="button is-text">
-              Delete
-            </a>
-          </td>
-        </tr>
-      {% endfor %}
-    </tbody>
-  </table>
-
-  <div class="pagination">
-      <span class="step-links">
-          {% if page_obj.has_previous %}
-              <a href="?page=1">&laquo; first</a>
-              <a href="?page={{ page_obj.previous_page_number }}">previous</a>
-          {% endif %}
-
-          <span class="current">
-              Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
-          </span>
-
-          {% if page_obj.has_next %}
-              <a href="?page={{ page_obj.next_page_number }}">next</a>
-              <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
-          {% endif %}
-      </span>
-  </div>
+  {% include "todos/todo_horizon_detail_partial.html" with page_obj=page_obj hidden=False %}
 </div>
 
 {% endblock %}
