--- a/todos/templates/todos/todo_form.html
+++ b/todos/templates/todos/todo_form.html
@@ -41,11 +41,13 @@
     </a>
   </p>
 
+  {% if not object.horizon == 'AC' %}
   <p class="control">
     <a href="{% url 'todos:todo-children' object.id %}" class="button is-text">
       Children
     </a>
   </p>
+  {% endif %}
 
   <p class="control">
     <a href="{% url 'todos:todo-comments' object.id %}" class="button is-text">
