add ability to update password

--- a/templates/registration/change_password.html
+++ b/templates/registration/change_password.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <h1 class="title">
-  Update Profile
+  Change Password
 </h1>
 
 <form method="post">
@@ -23,15 +23,10 @@
 
 {% include 'messages.html' with messages=messages %}
 
-<div class="mb-5 mt-5">
-  <a href="{% url 'todos:profile-password' %}" class="button is-text">
-    Change password
+<div class="mt-5">
+  <a href="{% url 'todos:profile-detail' %}" class="button is-text">
+    Update Profile
   </a>
 </div>
-
-<form method="post" action="{% url 'logout' %}">
-  {% csrf_token %}
-  <button type="submit" class="button is-danger">Logout</button>
-</form>
 
 {% endblock %}
