--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,24 @@
 .strikethrough {
   text-decoration: line-through
 }
+.mt-0 {
+  margin-top: 0rem;
+}
+.mt-1 {
+  margin-top: 0.25rem;
+}
+.mt-2 {
+  margin-top: 0.5rem;
+}
+.mt-3 {
+  margin-top: 1rem;
+}
+.mt-4 {
+  margin-top: 1.5rem;
+}
+.mt-5 {
+  margin-top: 3rem;
+}
 .mb-0 {
   margin-bottom: 0rem;
 }
