update children allowed to be blank and also update danger text

--- a/templates/auth/user_form.html
+++ b/templates/auth/user_form.html
@@ -14,7 +14,7 @@
         {{ field }}
       </div>
       {% if field.errors %}
-        <small class="error has-text-danger-dark">{{ field.errors|striptags }}</small>
+        <small class="error has-text-danger">{{ field.errors|striptags }}</small>
       {% endif %}
     </div>
   {% endfor %}
