--- a/templates/registration/change_password.html
+++ b/templates/registration/change_password.html
@@ -14,7 +14,7 @@
         {{ field }}
       </div>
       {% if field.errors %}
-        <small class="error has-text-danger-dark">{{ field.errors|striptags }}</small>
+        <small class="error has-text-danger">{{ field.errors|striptags }}</small>
       {% endif %}
     </div>
   {% endfor %}
