--- a/todos/templates/todos/todo_form.html
+++ b/todos/templates/todos/todo_form.html
@@ -24,7 +24,7 @@
         {% endif %}
       </div>
       {% if field.errors %}
-        <small class="error has-text-danger-dark">{{ field.errors|striptags }}</small>
+        <small class="error has-text-danger">{{ field.errors|striptags }}</small>
       {% endif %}
     </div>
   {% endfor %}
