--- a/todos/templates/todos/todo_children_form.html
+++ b/todos/templates/todos/todo_children_form.html
@@ -2,19 +2,19 @@
 {% block content %}
 
 <h1 class="title">
-  {{ form.instance.name }}
+  {{ object.name }}
 </h1>
 <h2 class="subtitle">
-  Horizon: {{ form.instance.horizon_name }}
+  Horizon: {{ object.horizon_name }}
 </h2>
 
 <form method="post">
+  {% csrf_token %}
   {% for field in form %}
-    {% csrf_token %}
     <div class="field">
       <label class="label" for="{{ field.auto_id }}">{{ field.label }}</label>
       <div class="control">
-        {% if field.name == 'children' %}
+        {% if field.name == 'children' or field.name == 'parents' %}
           {% if field|length == 0 %}
             None
           {% else %}
@@ -34,10 +34,12 @@
   <button type="submit" class="button is-primary">Save</button>
 </form>
 
+{% include 'messages.html' with messages=messages %}
+
 <br />
 
 <div class="field is-grouped">
-  {% if form.instance.pk %}
+  {% if object.pk %}
   <p class="control">
     <a href="{% url 'todos:todo-view' object.id %}" class="button is-text">
       View
@@ -52,8 +54,8 @@
   {% endif %}
 
   <p class="control">
-    <a href="{% url 'todos:horizon-detail-list' form.instance.horizon %}" class="button is-text">
-      View All {{ form.instance.horizon_name }}
+    <a href="{% url 'todos:horizon-detail-list' object.horizon %}" class="button is-text">
+      View All {{ object.horizon_name }}
     </a>
   </p>
 </div>
