limit description in table and show only name in other views

--- a/todos/templates/todos/todo_horizon_detail_row_partial.html
+++ b/todos/templates/todos/todo_horizon_detail_row_partial.html
@@ -5,7 +5,7 @@
     </a>
   </td>
   <td class="{% if todo.blocked %} has-text-grey-light {% endif %}{% if todo.completed %} strikethrough {% endif %}">
-    {{ todo.description }}
+    {{ todo.description|truncatechars:32 }}
   </td>
   <td class="{% if todo.blocked %} has-text-grey-light {% endif %}{% if todo.completed %} strikethrough {% endif %}">
     {{ todo.due_date }}
