--- a/todos/templates/todos/todo_tree.html
+++ b/todos/templates/todos/todo_tree.html
@@ -10,25 +10,11 @@
 </h2>
 
 Purpose &rarr; Vision &rarr; Goals &rarr; Focus &rarr; Projects &rarr; Actions
-<div class="box">
-  <ul class="tree">
-    {% for todo in todos %}
-    <li>
-      <details
-        hx-get="{% url 'todos:todo-tree-partial' todo.pk %}"
-        hx-trigger="click target:#summary-{{ todo.pk }}"
-        hx-target="find ul"
-        hx-swap="outerHTML">
-        <summary id="summary-{{todo.pk}}">
-          {{ todo.name }}
-          <a href="{% url 'todos:todo-view' todo.pk %}" target="_blank" rel="noopener noreferrer">
-            [see in new tab]
-          </a>
-        </summary>
-        <ul></ul>
-      </details>
-    </li>
-    {% endfor %}
-  </ul>
-</div>
+{% include 'todos/todo_tree_box.html' with todos=todos %}
+
+{% if orphaned %}
+Orphaned
+{% include 'todos/todo_tree_box.html' with todos=orphaned %}
+{% endif %}
+
 {% endblock %}
