--- a/todos/templates/todos/todo_detail.html
+++ b/todos/templates/todos/todo_detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load todo_extras %}
 {% block content %}
 
 <h1 class="title">
@@ -12,32 +13,38 @@
 <div class="box">
   <div class="block">
     <strong>Description:</strong>
-    {{ object.description }}
+    <br />
+    {{ object.description|rich_text|safe }}
   </div>
 
   <div class="block">
     <strong>Completed:</strong>
+    <br />
     {{ object.completed }}
   </div>
 
   <div class="block">
     <strong>Due Date:</strong>
+    <br />
     {{ object.due_date }}
   </div>
 
   <div class="block">
     <strong>Created At:</strong>
+    <br />
     {{ object.created_at }}
   </div>
 
   <div class="block">
     <strong>Updated At:</strong>
+    <br />
     {{ object.updated_at }}
   </div>
 
   {% if not object.horizon == 'AC' %}
   <div class="block">
     <strong>Children:</strong>
+    <br />
     <ul>
       {% for child in object.children.all %}
         <li>
@@ -54,6 +61,7 @@
   {% if not object.horizon == 'PU' %}
   <div class="block">
     <strong>Parents:</strong>
+    <br />
     <ul>
       {% for parent in object.is_contained_by %}
         <li>
